crates/worker-macros/tests/oneshot/many_input-fail.stderr
error: oneshot worker can accept at most 1 argument
 --> tests/oneshot/many_input-fail.rs:2:31
  |
2 | async fn Worker(input_1: u32, input_2: u32) -> u32 {
  |                               ^^^^^^^^^^^^
